"ChangeLog"

2005-08-31	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-55-footprint-01-30:
	  BUG FIXED: 066d.in -- now port_alias_signature is used
		recursively to replay internal collections.  
		Previous mistake was that was only applying port alias
		signature of leaf-most types, thereby missing connections
		imposed by parent types.  (Now we only use the parents'
		port alias signatures.)  
	  TODO: BUG process/066.in is next on the hit list.  
	  TODO: massive clean-up after bug fix.  


	* ARTXX-00-01-04-main-00-55-footprint-01-29:
	  Victory!!!  (almost) 
		Bottom-up recursion of connecting internal port aliases
		seems to work, even with some crazy cases.  
		Enabled creating of dependent types first.  
	  Added bunch of elementary test cases for replaying internal aliases
		in process/066*.in
	  BUG FIXED: in looking up instance_collection's corresponding
		alias, using the alias's key_type (special case for D = 1!)
		fixed in instance_alias<>::retrace_alias.
	  TODO: massive clean up of debugging code littered
		in "Object/inst/instance_collection.tcc".
	  TODO: write a TON of test cases, start to involve definition-local
		non-port aliases (which should be skipped).  
	  KNOWN BUGS to FIX: process/066 (fatal), 066d (wrong),
		connect/116, 117 (advanced handling of relaxed params)


2005-08-29	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-55-footprint-01-28:
	  Still working towards bottom-up construction of dependent types.  
		Inserted a pass before creating unique (after unroll)
		to create dependent types bottom-up.  Currently disabled.  
		Much stacktrace debugging needed.  
	  Added class_trait: can_internall_alias, for which it's
		currently only true for process types.  


2005-08-28	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-55-footprint-01-27:
	  Implemented (untested) routines to retrace aliases in internal 
		(definition-local) contexts in external contexts for the 